# BenefitBridge_Agent

./: .agents-cli-spec.md  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  agents-cli-manifest.yaml  design-qa.md  design.md  landing-redesign-rationale.html  pyproject.toml
.playwright-mcp/: page-2026-07-01T05-44-35-203Z.yml
app/: __init__.py  agent.py  api_schemas.py  callbacks.py  config.py  fast_api_app.py  graph.py  graph_workflow.py  schemas.py
app/app_utils/: telemetry.py  typing.py
app/policies/: __init__.py  freshness.py  geography.py  privacy.py  safety.py  source_grounding.py
app/prompts/: benefit_prep_agent.md  crisis_handoff.md  critic.md  root_agent.md  spanish_packet.md
app/services/: a2ui_contract.py  api_clients.py  auth.py  chat_llm.py  chat_workflow.py  google_integrations.py  packet_builder.py  source_store.py  telemetry.py
app/tools/: __init__.py  benefits.py  export.py  jurisdiction.py  local_resources.py  public_apis.py  redaction.py  sources.py  translation.py  validation.py  voice.py
demo-videos/benefitbridge-remotion/: README.md  package-lock.json  package.json  tsconfig.json
deployment/: README.md
docs/design/: DESIGN_SPEC.md  GRAPH_WORKFLOW.md
docs/evals/: EVAL_PLAN.md
docs/operations/: API_NOTES.md  FRESHNESS_AND_CALL_BEFORE_GOING.md
docs/security/: PRIVACY_AND_SECURITY.md  SOURCE_GROUNDING_RULES.md
frontend/: README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BenefitBridgeDashboard.tsx
frontend/data/: approvedSources.json  californiaCounties.json  syntheticProfiles.ts
frontend/lib/: api.ts  audio.ts  brand.ts  firebase.ts  locale-storage.ts  types.ts  useReducedMotion.ts
llm_wiki/: README.md
llm_wiki/agent_method/: adk-graph-workflow.md  agents-cli-lifecycle.md  context-engineering.md  protocol-boundaries.md
llm_wiki/evals/: eval-metrics.md  gold-profile-index.md  red-team-index.md
llm_wiki/handoffs/: session-handoff-template.md
llm_wiki/product/: geographies.md  mission-boundaries.md  non-goals.md  user-workflows.md
llm_wiki/safety/: crisis-dv-urgent-handoff.md  disallowed-claims.md  policy-server.md  privacy-and-pii.md
llm_wiki/schemas/: prep-packet-schema.md  tool-contracts.md
llm_wiki/sources/: citation-rules.md  freshness-policy.md  source-id-index.md  source-trust-order.md
references/docs/: benefitbridge_expanded_synthetic_profiles.json  (+1 more)
scripts/: build_eval_datasets.py  build_judge_dossier.py  combine_datasets.py  freeze_source_pack.py  prohibited_copy_scan.py  smoke_public_apis.sh  sync_frontend_data.py  validate_source_pack.py
specs/: benefitbridge_statewide_enhancements.feature
tests/: conftest.py
(+128 files in other folders)
