[project]
name = "aidatlasca"
version = "0.1.0"
description = "AidAtlasCA benefits preparation and handoff agent prototype"
authors = [
    {name = "AidAtlasCA Contributors"},
]



dependencies = [
    "fastapi>=0.115.8,<1.0.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-dlp>=3.32.0,<4.0.0",
    "google-cloud-secret-manager>=2.25.0,<3.0.0",
    "google-cloud-storage>=3.0.0,<4.0.0",
    "google-cloud-translate>=3.21.0,<4.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "uvicorn[standard]~=0.34.0",
    "google-cloud-speech>=2.40.0",
    "google-cloud-texttospeech>=2.37.0",
    "asyncpg>=0.30.0,<1.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
    "python-multipart>=0.0.20,<1.0.0",
    "sqlalchemy>=2,<3",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"
not-iterable = "ignore"
unsupported-operator = "ignore"

[tool.codespell]
ignore-words-list = "hsa,rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json,./references/**,./artifacts/**,./demo-videos/**,**/node_modules/**"




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]
